# hms-claude-mem

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  vcpkg.json
.github/workflows/: docker-build.yml  release.yml
src/: embedding_client.cpp  embedding_client.h  main.cpp  mcp_server.cpp  mcp_server.h  redis_client.cpp  redis_client.h  tools.cpp  tools.h
tests/unit/: test_mcp_server.cpp
